# pyrepo-test-agent

./: .env.example  .gitignore  README.md  pyproject.toml  架构设计详解.md
app/: __init__.py  main.py
app/agents/: __init__.py  api_test_writer_agent.py  base_agent.py  failure_analyst_agent.py  regression_case_agent.py  repair_agent.py  repo_scanner_agent.py  sandbox_runner_agent.py  source_context.py  spec_inference_agent.py  test_planner_agent.py  test_writer_utils.py  unit_test_writer_agent.py
app/core/: __init__.py  env_loader.py  parallel_executor.py  pipeline.py  repair_loop.py  state.py
app/llm/: __init__.py  code_utils.py  json_utils.py  zai_client.py
app/parsers/: __init__.py  ast_parser.py  diff_parser.py  import_graph.py
app/prompts/: __init__.py  planning_prompts.py  repair_prompts.py  spec_prompts.py
app/reports/: __init__.py  report_builder.py
app/runners/: __init__.py  pytest_runner.py
examples/sample_repo/: calculator.py
tests/: test_ast_parser.py  test_pipeline.py
